x402scan fixes, additional metadata and openapi spec - favicon added for x402 routes
